--- a/src/index.css
+++ b/src/index.css
@@ -3,13 +3,59 @@
 body {
   margin: 0;
   font-family: "Poppins", sans-serif !important;
-  margin-bottom: 40px;
+  margin-bottom:none;
   padding-right: 0px !important;
   padding: 0px !important;
   background-color: #fff !important;
   max-width: 100% !important;
 }
+.map { 
+  width: 25rem;
+  box-shadow: 0px 2px 10px blue;
+  border: 2px;
+  border-radius: 40px;
+  margin: 25%;
+  transform: rotate(-0.26deg);
+  justify-content: center;
+  align-content: right;
+  margin-top: 0%;
+}
+.marker-btn img {
+  width: 2rem;
+  height: 2rem;
+}
+.content{
+  
+  display: inline-block;
+}
 
+.nueva{
+  margin-inline-start: 0%;
+  /* height: auto; */
+  display: inline;
+}
+.voluntario{
+font-family: Poppins;
+font-style: normal;
+font-weight: bold;
+font-size: 18px;
+line-height: 27px;
+text-align: center;
+}
+.container img{
+  max-width: 100%;
+  height: auto;
+}
+.green{
+  color:#31e197;
+}
+#celeste{
+  background-color:#00d0ff;
+ }
+.corta{
+  display:flex; 
+  width: 30vw;
+}
 .div {
   max-width: 100% !important;
 }
