--- a/src/index.css
+++ b/src/index.css
@@ -3,33 +3,13 @@
 body {
   margin: 0;
   font-family: "Poppins", sans-serif !important;
-  margin-bottom:none;
+  margin-bottom: 40px;
   padding-right: 0px !important;
   padding: 0px !important;
   background-color: #F6F7FA!important;
   max-width: 100% !important;
 }
-.map { 
-  width: 25rem;
-  box-shadow: 0px 2px 10px blue;
-  border: 2px;
-  border-radius: 40px;
-  margin: 25%;
-  transform: rotate(-0.26deg);
-  justify-content: center;
-  align-content: right;
-  margin-top: 0%;
-}
-.marker-btn img {
-  width: 2rem;
-  height: 2rem;
-}
 
-
-.content{
-  
-  display: inline-block;
-}
 
 .div {
   max-width: 100% !important;
@@ -70,7 +50,11 @@ p.raices {
   text-align: center !important;
   align-items: center !important;
 }
+a:hover{
 
+  color: #fff;
+}
+.linkText{ color: white ; }
 .boton-about:hover {
   width: 300px;
   color: black;
